--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ resolver = "2"
 
 [workspace.package]
 edition = "2021"
-authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
-homepage = "https://zksync.io/"
+authors = ["ADI Foundation"]
+homepage = "https://adi.foundation"
 license = "MIT OR Apache-2.0"
 keywords = ["blockchain", "zksync"]
 categories = ["cryptography"]
-repository = "https://github.com/matter-labs/zksync-crypto-gpu"
+repository = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Lib-Crypto-GPU"
 # All the packages in the workspace should have the same version
 version = "0.155.3" # x-release-please-version
 
